--- a/play.html
+++ b/play.html
@@ -71,6 +71,7 @@
             <td>surya</td>
         </tr>
     </table>
+    <a href="secondact.html">second page</a>
        
     </body>
 </html>
