--- a/play.html
+++ b/play.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>
-            Sireesha Mamillapalli "THE STRONGER"
+            Sireesha Mamillapalli "snips a play"
         </h1>
         <h2>
             THE STRONGER
@@ -72,6 +72,11 @@
         </tr>
     </table>
     <a href="secondact.html">second page</a>
+    <div><img class="image" src="house.jpg"/></div>
+
+    <ul class="navbar-horizontal">
+        <li> <a href="play.html" class="glyphicon glyphicon-thumbs-up"> Play html</a> </li>
+        <li> <a href="secondact.html" class="glyphicon glyphicon-user"> SecondAct html</a> </li>
        
     </body>
 </html>
